--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cmpt315-a3",
   "version": "0.1.0",
+  "homepage": "https://zswensrude.github.io/CMPT315-Lab3/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -13,6 +14,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
